@@ -1,6 +1,13 @@
 <?php
 include_once 'includes/init.php';
 
+if ( $allow_view_other != 'Y' ) {
+  print_header ();
+  etranslate("You are not authorized");
+  print_trailer ();
+  exit;
+}
+
 $updating_public = false;
 if ( $is_admin && ! empty ( $public ) && $public_access == "Y" ) {
   $updating_public = true;
